<resources>
    <string name="app_name">Banco-jototo</string>
    <string name="bank_name">BankOnMe</string>
    <string name="text_btn_login">Continue</string>
    <string name="text_btn_exit">Exit</string>
    <string name="terms_use_text">Please login. If you access our service, you agree to the terms of use.</string>
    <string name="error_id_field">Invalid ID</string>
    <string name="error_empty_field">Required Field</string>
    <string name="error_password_length">The password must be at least 4 characters.</string>
    <string name="error_wrong_password">Wrong password</string>
    <string name="error_empty_edit_text">You have to type in a password</string>
    <string name="card_welcoming">Welcome</string>
    <string name="welcome_text">Your online bank</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_new_pass">Confirm the new password</string>
    <string name="text_confirm_pass">Update password</string>
    <string name="text_btn_back">Back</string>
    <string name="error_confirm_pass">Password does not match</string>
    <string name="snackbar_pass_change">Updated password</string>
    <string name="snackbar_pass_unchanged">Password has not been changed</string>
    <string name="helper_text_login_fields">Required</string>
    <string name="hint_field_login_pass">Password</string>
    <string name="hint_field_login_id">ID</string>
    <string name="text_btnGlobalPosition">GLOBAL POSITION</string>
    <string name="text_btnTransactions">TRANSACTIONS</string>
    <string name="text_btnTransfers">TRANSFERS</string>
    <string name="text_btnChangePass">CHANGE PASSWORD</string>
    <string name="text_btnPromotions">PROMOTIONS</string>
    <string name="text_btnAtm">CASH MACHINES</string>
    <string name="text_transfers_title">Transfers</string>
    <string name="caption_account_selection">Choose your account</string>
    <string name="checkOwnAccount">Own account</string>
    <string name="checkOtherAccount">Else\'s account</string>
    <string name="text_qty">Quantity:</string>
    <string name="text_justifying">Send a receipt</string>
    <string name="send_transfer">Send transfer</string>
    <string name="cancel_transfer">Cancel</string>
    <string name="text_edit_else_accout">Write recipient\'s account number</string>
    <string name="snack_text_radioButton">Select an account type</string>
    <string name="sender_account">Sender account:</string>
    <string name="recipient_account">Recipient account:</string>
    <string name="recipient_own_account">Recipient own account:</string>
    <string name="amount">Amount:</string>
    <string name="text_checked_receipt">Send a receipt</string>
    <string name="text_not_checked_receipt">Not send a receipt</string>
    <string name="dcsImg">Icon image</string>
    <string name="text_globPosition_title">Global Position</string>
    <string name="accounts">Accounts:</string>
    <string name="text_movements_title">Movements</string>
    <string name="caption_last_movements">Last movements:</string>
    <string name="text_btnMovements">Movements</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="dialogTitleMovements">Details of the movement:</string>
    <string name="navigation_all">All</string>
    <string name="navigation_t0">Type 0</string>
    <string name="navigation_t1">Type 1</string>
    <string name="navigation_t2">Type 2</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_nav_logout">Logout</string>
    <string name="text_nav_config">Settings</string>
    <string name="text_nav_home">Home</string>
    <string name="open_nav">Open menu nav</string>
    <string name="close_nav">Close menu nav</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="text_atm_title">ATM\n</string>
    <string name="text_btn_atm_list">ATM LIST</string>
    <string name="text_btn_atm_add">ATM ADD</string>
    <string name="text_btn_atm_maps">ATM MAPS</string>
    <string name="text_atm_num">ATM 1</string>
    <string name="text_atm_management_title">Management ATM</string>
    <string name="text_atm_addres">Address</string>
    <string name="text_atm_latitude">Latitude</string>
    <string name="text_atm_longitude">Longitude</string>
    <string name="text_save_atm">SAVE</string>
    <string name="text_cancel_atm">CANCEL</string>
    <string name="text_atm_list_title">ATM List</string>
    <string name="select_atm_text">Select ATM:</string>
    <string name="text_menu_delete">Delete</string>
    <string name="text_menu_update">Update</string>
    <string name="text_atm_id">Id</string>
    <string name="text_toolbar_update">Update Atm</string>
    <string name="text_toolbar_add">Add Atm</string>
    <string name="text_toolbar_delete">Delte Atm</string>
    <string name="text_alert_atm_dialog">Are you sure you want to delete ATM?</string>
    <string name="text_title_atm_dialog">Delete ATM</string>
    <string name="toast_delete">ATM Deleted</string>
    <string name="toast_update">ATM Updated</string>
    <string name="toast_add">ATM Added</string>

    <!-- Preference Titles -->
    <string name="sync_header">Language</string>

    <string name="messages_header_multimedia">Multimedia</string>
    <string name="music_title">Music</string>
    <string name="text_music_off">Do not listen to the music while the application is running.</string>
    <string name="text_music_on">Listen to music while the application is running</string>
    <string name="text_video_off">Do not play a video when starting the application</string>
    <string name="text_video_on">Play a video when starting the application</string>
    <string name="video_title">Welcome video</string>
    <string name="title_data">Data</string>
    <string name="text_language">App language</string>
    <string name="text_chose_language">Select language</string>
    <string name="text_data">Data origin\n</string>
    <string name="local_data_text">Local data</string>
    <string name="web_data_text">Web service</string>



</resources>