<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/messages_header_multimedia"
        app:icon="@drawable/ic_music"
        >

        <SwitchPreference
            app:key="reproducirMusica"
            app:summaryOff="@string/text_music_off"
            app:summaryOn="@string/text_music_on"
            app:title="@string/music_title"/>

        <SwitchPreference
            app:key="reproducirVideo"
            app:summaryOff="@string/text_video_off"
            app:summaryOn="@string/text_video_on"
            app:title="@string/video_title"/>

    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/sync_header"
        app:icon="@drawable/ic_language">

        <ListPreference
            app:key="language"
            app:title="@string/text_language"
            app:useSimpleSummaryProvider="true"
            app:dialogTitle="@string/text_chose_language"
            app:entries="@array/language"
            app:entryValues="@array/languagecode"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/title_data"
        app:icon="@drawable/baseline_cloud_24">
        <ListPreference
            app:key="data"
            app:title="@string/text_data"
            app:useSimpleSummaryProvider="true"
            app:dialogTitle="@string/text_data"
            app:entries="@array/data_origin"
            app:entryValues="@array/languagecode"/>
    </PreferenceCategory>

</PreferenceScreen>