<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/azul_oscuro_profundo"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_global_position"
            android:title="@string/text_btnGlobalPosition"/>

        <item
            android:id="@+id/nav_globalPosition"
            android:icon="@drawable/ic_global_position"
            android:title="@string/text_btnGlobalPosition"/>

        <item
            android:id="@+id/nav_movements"
            android:icon="@drawable/ic_transactions"
            android:title="@string/text_btnMovements"/>

        <item
            android:id="@+id/nav_transfer"
            android:icon="@drawable/ic_transfers"
            android:title="@string/text_btnTransfers"/>

        <item
            android:id="@+id/nav_changePassword"
            android:icon="@drawable/ic_change_password"
            android:title="@string/text_btnChangePass"/>
        <item
            android:id="@+id/nav_Promotions"
            android:icon="@drawable/ic_promote"
            android:title="@string/text_btnPromotions"/>
        <item
            android:id="@+id/nav_atm"
            android:icon="@drawable/ic_atm"
            android:title="@string/text_btnAtm"/>
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_close"
            android:title="@string/text_btn_exit"/>
    </group>
    <item
        android:title="">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/nav_logout"
                android:title="Logout"/>
        </menu>

    </item>

</menu>