<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AtmManagementActivity"
    android:background="@color/azul_oscuro_profundo">

    <TextView
        android:id="@+id/atmTitle"
        style="@style/titleSectionStyle"
        android:textSize="50sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_atm_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAtmList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/btnMainMenu"
        android:text="@string/text_btn_atm_list"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/atmTitle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAtmAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/btnMainMenu"
        android:text="@string/text_btn_atm_add"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnAtmList"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAtmMaps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/btnMainMenu"
        android:text="@string/text_btn_atm_maps"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnAtmAdd"/>

</androidx.constraintlayout.widget.ConstraintLayout>