<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/azul_oscuro_profundo"
    tools:context=".fragments.MainActivityFragment">

    <!-- TODO: Update blank fragment layout -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/welcome_card_view"
        style="?attr/materialCardViewElevatedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true"
        android:visibility="visible"
        app:cardBackgroundColor="#1B2F4A"
        app:cardElevation="1dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1B2F4A"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/avatarCard"
                android:layout_width="@dimen/card_avatar_size"
                android:layout_height="@dimen/card_avatar_size"
                android:background="#1B2F4A"
                android:src="@drawable/chicken_avatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/card_title_welcoming"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#1B2F4A"
                android:gravity="center"
                android:text="@string/card_welcoming"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/avatarCard"/>

            <TextView
                android:id="@+id/view_dni"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/azul_oscuro_medio"
                android:gravity="center_horizontal"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="@id/card_title_welcoming"
                app:layout_constraintStart_toStartOf="@id/card_title_welcoming"
                app:layout_constraintTop_toBottomOf="@+id/card_title_welcoming" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/welcome_card_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGlobalPosition"
            style="@style/btnMainMenu"
            android:text="@string/text_btnGlobalPosition"
            app:icon="@drawable/ic_global_position" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMovements"
            style="@style/btnMainMenu"
            android:text="@string/text_btnMovements"
            app:icon="@drawable/ic_transactions" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTransfers"
            style="@style/btnMainMenu"
            android:text="@string/text_btnTransfers"
            app:icon="@drawable/ic_transfers" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnChangePass"
            style="@style/btnMainMenu"
            android:text="@string/text_btnChangePass"
            app:icon="@drawable/ic_change_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPromotions"
            style="@style/btnMainMenu"
            android:text="@string/text_btnPromotions"
            app:icon="@drawable/ic_promote" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAtm"
            style="@style/btnMainMenu"
            android:text="@string/text_btnAtm"
            app:icon="@drawable/ic_atm" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnExit"
            style="@style/btnSubtle"
            android:layout_marginTop="-8dp"
            android:layout_gravity="center"
            android:text="@string/text_btn_exit"
            app:icon="@drawable/ic_close"/>
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coord_bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottomAppBar"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/azul_oscuro_medio"
            app:fabAnimationMode="slide"
            app:hideOnScroll="true"
            app:navigationIcon="@drawable/ic_menu"
            app:navigationIconTint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/float_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/azul_electrico"
            android:src="@drawable/ic_bank_account"
            android:tint="@color/azul_oscuro_medio"
            app:layout_anchor="@id/bottomAppBar"
            app:shapeAppearance="@style/Widget.MaterialComponents.BottomAppBar.Colored" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>