<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MovementsActivity"
    android:background="@color/azul_oscuro_profundo">

    <TextView
        android:id="@+id/movementsTitle"
        style="@style/titleSectionStyle"
        android:textSize="50sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_movements_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/choiceAccounts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caption_account_selection"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/movementsTitle"/>
    <Spinner
        android:id="@+id/spinnerMovements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choiceAccounts" />

    <TextView
        android:id="@+id/lastMovements"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caption_last_movements"
        android:textColor="@color/white"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerMovements"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rwMovements"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:listitem="@layout/item_movements"
        app:layout_constraintTop_toBottomOf="@+id/lastMovements"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>